wokring to keep the modal page fixed as the chrom mobile address bar goes offscreen

--- a/css/main.css
+++ b/css/main.css
@@ -1085,7 +1085,7 @@ body {
 .modal {
   width: 100%;
   height: 100vh;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.9);
